changed version of javafx to remove some errors